cloud_poc/kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyfuse-cloud-mongodb
  namespace: pyfuse-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyfuse-cloud-mongodb
  template:
    metadata:
      labels:
        app: pyfuse-cloud-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pyfuse-cloud-mongodb
  namespace: pyfuse-cloud
spec:
  selector:
    app: pyfuse-cloud-mongodb
  ports:
    - port: 27017
      targetPort: 27017
